# Python-in-Gwyddion

./: .gitattributes  .gitignore  README.md  pyproject.toml
precompiled/: README_source_build.md
precompiled/windows/: run_gwy_py.bat
src/: Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  threshold-example.c
src/.deps/: threshold-example.Plo
src/.libs/: threshold-example.lai
src/autom4te.cache/: output.0  requests  traces.0  traces.1
tool_python_scripts/: absurd_process.py  quicksegment.py
